Estructura básica del header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 </head>
 <body>
     <header>
-
+        <img src="./assets/img/logo.svg" alt="">
+        <div>
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p>Batatabit te ayuda a navegar entre los diferente precios y tendencias.</p>
+            <a href="#"></a>
+        </div>
     </header>
     <main>
         <section></section>
