--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <header>
         <img src="./assets/img/logo.svg" alt="">
-        <div>
+        <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferente precios y tendencias.</p>
-            <a href="#"></a>
+            <a href="#" class="header--button">Conoce nuestros planes <span>i</span></a>
         </div>
     </header>
     <main>
