--- a/index.html
+++ b/index.html
@@ -53,8 +53,35 @@
                     <div class="currency-table--date">
                         <p><b>Actualizado:</b> 19 Julio 23:45</p>
                     </div>
+                </div>
+                <div class="main-comission-table">
+                    <p class="comission-table--title">Comisiones</p>
+                    <div class="comission-table--container">
+                        <table>
+                            <tr>
+                            <td class="table__top-left">Bitrade</td>
+                            <td class="table__top-right table__right">$ 12.96</td>
+                            </tr>
+                            <tr>
+                                <td>Bitpreco</td>
+                                <td class="table__right">$ 13.07</td>
+                            </tr>
+                            <tr>
+                                <td>Novadax</td>
+                                <td class="table__right">$ 13.15</td>
+                            </tr>
+                            <tr>
+                                <td class="table__bottom-left">Coinext</td>
+                                <td class="table__bottom-right table__right">$ 14.96</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="comission-table--date">
+                        <p><b>Actualizado:</b> 19 Julio 23:45</p>
+                    </div>
                     
                 </div>
+                
             </section>
         </section>
         <section class="main-product-detail">
@@ -64,30 +91,47 @@
                 <p>Confiable y diseñado para su uso diario.</p>
             </div>
             <section class="producto-cards--container">
-                <article class="product-detail-card">
+                <article class="product-detail--card">
                     <span class="clock"></span>
                     <p class="product--card-title">Tiempo real</p>
                     <p class="product--card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
                 </article>
-                <article class="product-detail-card">
+                <article class="product-detail--card">
                     <span class="eye"></span>
                     <p class="product--card-title">No hay tasas escondidas</p>
                     <p class="product--card-body">Ni en la compra o al momento de exit, Batabit siempre te muestra el costo real de lo que estás adquiriendo.</p>
                 </article>
-                <article class="product-detail-card">
+                <article class="product-detail--card">
                     <span class="dollar"></span>
                     <p class="product--card-title">Compara monedas</p>
                     <p class="product--card-body">No más rumores, con Babtabit sabrás el valor real de cada moneda en el mercado actual.</p>
                 </article>
-                <article class="product-detail-card">
+                <article class="product-detail--card">
                     <span class="check"></span>
                     <p class="product--card-title">Información confiable</p>
                     <p class="product--card-body">Nuestras fuentes están 100% verificadas y continuamos auditando su contenido mientras se actualizan.</p>
                 </article>
             </section>    
         </section>
-        <section></section>
-        <section></section>
+        <section class="main-img">
+            <img src="./assets/img/bitcoinbaby2x.jpg" alt="">
+            <h2>Conócelo hoy.</h2>
+        </section>
+        <section>
+            <div>
+                <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+                <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+            </div>
+            <section>
+                <article>
+                    <h2>Recomendado</h2>
+                    <p>Pago Anual</p>
+                    <h3><span>i</span>99</h3>
+                    <p>*Ahorras $129 comparado al plan mensual.</p>
+                    <p>Escoger este<span>i</span></p>
+                </article>
+            </section>
+        </section>
     </main>
     <footer>
 
