--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header--title-container">
             <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
             <p>Batatabit te ayuda a navegar entre los diferente precios y tendencias.</p>
-            <a href="#" class="header--button">Conoce nuestros planes <span></span></a>
+            <a href="#plans" class="header--button">Conoce nuestros planes <span></span></a>
         </div>
     </header>
     <main>
@@ -114,27 +114,39 @@
             </section>    
         </section>
         <section class="main-img">
-            <img src="./assets/img/bitcoinbaby2x.jpg" alt="">
             <h2>Conócelo hoy.</h2>
         </section>
-        <section>
-            <div>
+        <section id="plans" class="main-plans-container">
+            <div class="plans--title">
                 <h2>Escoge el plan que mejor se ajuste a ti.</h2>
                 <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
             </div>
-            <section>
-                <article>
-                    <h2>Recomendado</h2>
-                    <p>Pago Anual</p>
-                    <h3><span>i</span>99</h3>
-                    <p>*Ahorras $129 comparado al plan mensual.</p>
-                    <p>Escoger este<span>i</span></p>
+            <section class="plans-container--slider">
+                <article class="plans-container--card1"></article>
+                <article class="plans-container--card2">
+                    <p class="recommended">Recomendado</p>
+                    <div class="plan-info-container">
+                        <h3 class="plan-card--title">Pago Anual</h3>
+                        <p class="plan-card--price"><span>$</span>99</p>
+                        <p class="plan-card--saving">*Ahorras $129 comparado al plan mensual.</p>
+                        <button class="plan-card--ca">Escoger este<span></span></button>
+                    </div>
                 </article>
+                <article class="plans-container--card3"></article>
             </section>
         </section>
     </main>
     <footer>
-
+        <section>
+            <ul>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Crunchbase</a></li>
+                <li><a href="#">Hackernews</a></li>
+            </ul>
+        </section>
+        <section>
+            <img src="./assets/img/logo-footer.svg" alt="Logo de Batatabit 2020">
+        </section>
     </footer>
 </body>
 </html>
